kubernetes/service.yml
kind: Service
apiVersion: v1
metadata:
  name: moodle
  namespace: moodle
spec:
  selector:
    app: moodle
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: mysql
  namespace: moodle
spec:
  selector:
    app: mysql
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
