kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: moodle
  namespace: moodle
spec:
  rules:
  - host: moodle.k8s.local
    http:
      paths:
      - backend:
          serviceName: moodle
          servicePort: 80
